# torch-extension-template

./: CMakeLists.txt  cmake_setup.sh  main.cpp  readme.md
src/: cpp_extension.cpp
